<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bg"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@color/colorSearch"
            android:focusable="true"
            android:fontFamily="@font/arial"
            android:gravity="center_vertical|start"
            android:hint="@string/search_for_meals"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorBtnSource"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/search_by"
            android:textColor="@color/colorText"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radio_btn_meal"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/radio_btn_meal"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorText"
                android:fontFamily="@font/google_regular"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/radio_btn_area"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorText"
                android:fontFamily="@font/google_regular"
                android:text="@string/area"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="12sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/radio_btn_ingredients"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorText"
                android:fontFamily="@font/google_regular"
                android:text="@string/ingredient"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="12sp" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mealsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                tools:listitem="@layout/meal_item" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>